# MiMo-ASR-Assistant

./: .gitignore  README.md  index.html  package-lock.json  package.json  reasonix.toml  vite.config.ts
src/: App.vue
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: dpapi.rs  lib.rs  log.rs  main.rs  rate_limiter.rs
src-tauri/src/api/: mod.rs
src-tauri/src/audio/: mod.rs
src-tauri/src/ffmpeg/: mod.rs
src-tauri/src/prompt/: mod.rs
src-tauri/src/provider/: mod.rs
src/components/: CustomSelect.vue  FileList.vue  SettingsDrawer.vue  StatusBar.vue  TitleBar.vue  Toast.vue  Toolbar.vue  Workspace.vue
src/stores/: app.ts
src/types/: index.ts
src/utils/: markdown.ts
